@@ -25,7 +25,8 @@ class Smarty_Method_Unregister_Outputfilter extends Smarty_Internal_Base {
     */
     public function execute($function)
     {
-        unset($this->smarty->registered_filters['output'][$function]);
+        $_name = (is_array($function)) ? $function[0] : $function;
+        unset($this->smarty->registered_filters['output'][$_name]);
     } 
 } 
 
